Create responsive top menu; Add new routes

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -1,4 +1,7 @@
 {
-  "YES": "yes",
-  "NO": "no"
+  "PRODUCTS": "Products",
+  "PROFILE": "Profile",
+  "RECIPES": "Recipes",
+  "LOGIN": "Login",
+  "LOGOUT": "Logout"
 }
