Finish Product details (/products/:id)

--- a/src/translations/pl/products.json
+++ b/src/translations/pl/products.json
@@ -20,5 +20,8 @@
   "almond": "Migdał",
   "cashew_nut": "Orzech nerkowca",
   "salmon": "Łosoś",
-  "sardine": "Sardynka"
+  "sardine": "Sardynka",
+  "ADVANTAGES": "Zalety",
+  "DISADVANTAGES": "Wady",
+  "CONTRAINDICATIONS": "Przeciwwskazania"
 }
