Create recipes list and details

--- a/src/translations/pl/recipes.json
+++ b/src/translations/pl/recipes.json
@@ -1,1 +1,7 @@
-{}
+{
+  "NO_RECIPES": "Nie znaleziono przepisów.",
+  "DESCRIPTION": "Opis",
+  "INGREDIENTS": "Składniki",
+  "INSTRUCTION": "Instrukcja",
+  "RELATED_PRODUCTS": "Powiązane produkty"
+}
