Add creating recipe feature

--- a/src/translations/pl/common.json
+++ b/src/translations/pl/common.json
@@ -17,5 +17,10 @@
   "REGISTRATION": "Rejestracja",
   "REGISTER": "Zarejestruj",
   "REGISTER_SUCCESS": "Pomyślnie zarejestrowano",
-  "REGISTER_ERROR": "Nie udało się zarejestrować"
+  "REGISTER_ERROR": "Nie udało się zarejestrować",
+  "SAVE": "Zapisz",
+  "ADD": "Dodaj",
+  "NAME": "Nazwa",
+  "DESCRIPTION": "Opis",
+  "PROCESSING": "Przetwarzanie..."
 }
