Create /proposals route

--- a/src/translations/pl/common.json
+++ b/src/translations/pl/common.json
@@ -2,6 +2,7 @@
   "PRODUCTS": "Produkty",
   "PROFILE": "Profil",
   "RECIPES": "Przepisy",
+  "PROPOSALS": "Propozycje",
   "LOGIN": "Zaloguj",
   "LOGOUT": "Wyloguj",
   "LOGGING": "Logowanie",
