Create DeleteRecipe component

--- a/src/translations/pl/common.json
+++ b/src/translations/pl/common.json
@@ -21,6 +21,9 @@
   "REGISTER_ERROR": "Nie udało się zarejestrować",
   "SAVE": "Zapisz",
   "ADD": "Dodaj",
+  "CANCEL": "Anuluj",
+  "DELETE": "Usuń",
+  "EDIT": "Edytuj",
   "NAME": "Nazwa",
   "DESCRIPTION": "Opis",
   "PROCESSING": "Przetwarzanie..."
