Add related recipes in product details

--- a/src/translations/pl/products.json
+++ b/src/translations/pl/products.json
@@ -23,5 +23,6 @@
   "sardine": "Sardynka",
   "ADVANTAGES": "Zalety",
   "DISADVANTAGES": "Wady",
-  "CONTRAINDICATIONS": "Przeciwwskazania"
+  "CONTRAINDICATIONS": "Przeciwwskazania",
+  "RELATED_RECIPES": "Powiązane przepisy"
 }
