Create /users route

--- a/src/translations/pl/common.json
+++ b/src/translations/pl/common.json
@@ -3,6 +3,7 @@
   "PROFILE": "Profil",
   "RECIPES": "Przepisy",
   "PROPOSALS": "Propozycje",
+  "USERS": "Użytkownicy",
   "LOGIN": "Zaloguj",
   "LOGOUT": "Wyloguj",
   "LOGGING": "Logowanie",
