--- a/src/translations/pl/users.json
+++ b/src/translations/pl/users.json
@@ -5,6 +5,7 @@
   "ROLE": "Rola",
   "admin": "Administrator",
   "user": "Użytkownik",
+  "UNKNOWN": "Nieznany",
   "DELETE_USER_TITLE": "Usuń użytkownika",
   "DELETE_USER_DESCRIPTION": "Czy na pewno chcesz usunąć użytkownika o nazwie {{name}}?",
   "DELETE_USER_SUCCESS": "Użytkownik został usunięty",
