Add errorElement to router

--- a/src/translations/pl/common.json
+++ b/src/translations/pl/common.json
@@ -27,5 +27,7 @@
   "EDIT": "Edytuj",
   "NAME": "Nazwa",
   "DESCRIPTION": "Opis",
-  "PROCESSING": "Przetwarzanie..."
+  "PROCESSING": "Przetwarzanie...",
+  "CANNOT_FIND_ROUTE": "Nie można znaleźć strony",
+  "BACK_TO_HOMEPAGE": "Wróć do strony głównej"
 }
