Create EditRecipe page; Create RecipeForm to create and update recipe

--- a/src/translations/pl/common.json
+++ b/src/translations/pl/common.json
@@ -29,5 +29,6 @@
   "DESCRIPTION": "Opis",
   "PROCESSING": "Przetwarzanie...",
   "CANNOT_FIND_ROUTE": "Nie można znaleźć strony",
-  "BACK_TO_HOMEPAGE": "Wróć do strony głównej"
+  "BACK_TO_HOMEPAGE": "Wróć do strony głównej",
+  "ACTIVE": "Aktywny"
 }
