--- a/src/translations/pl/homepage.json
+++ b/src/translations/pl/homepage.json
@@ -3,6 +3,8 @@
   "RANDOM_RECIPE_TITLE": "Losowanie przepisu",
   "RANDOM_RECIPE_DESCRIPTION": "Nie masz pomysłu na danie? Wylosuj przepis dla siebie!",
   "DRAW": "Losuj",
+  "RANDOM_RECIPE_SUCCESS": "Przepis został wylosowany",
+  "RANDOM_RECIPE_ERROR": "Nie udało się wylosować przepisu",
   "NOT_LOGGED_USERS_TITLE": "Chcesz się podzielić swoim przepisem z innymi?",
   "NOT_LOGGED_USERS_DESCRIPTION": "<registerLink>Utwórz konto</registerLink> lub <loginLink>zaloguj się</loginLink>, aby w pełni korzystać z aplikacji. Możesz proponować swoje przepisy oraz dodawać je do ulubionych! Ponadto masz możliwość dodawania brakujących produktów. Nie zwlekaj, tylko dołącz do naszej społeczności!"
 }
